--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.3.0
+async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
@@ -5,35 +10,69 @@ bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+dataclasses-json==0.6.4
+distro==1.9.0
 et-xmlfile==1.1.0
+exceptiongroup==1.2.0
 Flask==3.0.1
 Flask-Cors==4.0.0
+frozenlist==1.4.1
+greenlet==3.0.3
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.6
+importlib_metadata==7.1.0
 isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.1.14
+langchain-community==0.0.31
+langchain-core==0.1.40
+langchain-openai==0.1.1
+langchain-text-splitters==0.0.1
+langsmith==0.1.40
 lxml==5.1.0
 MarkupSafe==2.1.5
+marshmallow==3.21.1
+multidict==6.0.5
+mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.26.3
+openai==1.16.2
 openpyxl==3.1.2
+orjson==3.10.0
 packaging==23.2
 pandas==2.2.0
 platformdirs==4.2.0
 psycopg2==2.9.9
+pyarrow==15.0.2
+pydantic==2.6.4
+pydantic_core==2.16.3
 python-dateutil==2.8.2
 pytz==2024.1
+PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 requests-file==2.0.0
 requests-toolbelt==1.0.0
 six==1.16.0
+sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.29
+tenacity==8.2.3
+tiktoken==0.6.0
 tqdm==4.66.1
+typing-inspect==0.9.0
+typing_extensions==4.11.0
 tzdata==2023.4
 Unidecode==1.3.8
 urllib3==2.2.0
 Werkzeug==3.0.1
+yarl==1.9.4
 zeep==4.2.1
+zipp==3.18.1
