--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==3.0.1
 Flask-Cors==4.0.0
 gunicorn==21.2.0
 idna==3.6
+importlib_metadata==7.1.0
 isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -23,6 +24,7 @@ packaging==23.2
 pandas==2.2.0
 platformdirs==4.2.0
 psycopg2==2.9.9
+pyarrow==15.0.2
 python-dateutil==2.8.2
 pytz==2024.1
 regex==2023.12.25
@@ -37,3 +39,4 @@ Unidecode==1.3.8
 urllib3==2.2.0
 Werkzeug==3.0.1
 zeep==4.2.1
+zipp==3.18.1
