Variaveis de ambiente(2)

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_NAME=
-DATABASE_USER=
+DATABASE_PASSWORD=root
+DATABASE_HOST=localhost
+DATABASE_NAME=simcc_
+DATABASE_USER=postgres
+ADM_DATABASE=admin
