mudanças de qualidade de vida(1)

--- a/.env.exemple
+++ b/.env.exemple
@@ -3,3 +3,5 @@ DATABASE_HOST=
 DATABASE_NAME=
 DATABASE_USER=
 ADM_DATABASE=
+# Descomentar para baixar os curriculos pelo Tupi
+# ALTERNATIVE_CNPQ_SERVICE=true
