--- a/.env.exemple
+++ b/.env.exemple
@@ -5,3 +5,4 @@ DATABASE_USER=
 ADM_DATABASE=
 # Descomentar para baixar os curriculos pelo Tupi
 # ALTERNATIVE_CNPQ_SERVICE=true
+JADE_EXTRATOR_FOLTER=
