--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,35 @@
-annotated-types==0.7.0
+attrs==23.2.0
 blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==4.0.1
+gunicorn==22.0.0
 idna==3.7
+isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
+lxml==5.2.2
 MarkupSafe==2.1.5
 nltk==3.8.1
-numpy==1.26.4
+numpy==2.0.0
+packaging==24.1
 pandas==2.2.2
-psycopg2-binary==2.9.9
-pydantic==2.7.3
-pydantic_core==2.18.4
+platformdirs==4.2.2
+psycopg2==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 regex==2024.5.15
 requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
 six==1.16.0
 tqdm==4.66.4
-typing_extensions==4.12.2
 tzdata==2024.1
 Unidecode==1.3.8
-urllib3==2.2.1
+urllib3==2.2.2
 Werkzeug==3.0.3
+zeep==4.2.1
