alterações para conteinerização(2)

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
 platformdirs==4.2.2
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
