--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==4.0.1
+gunicorn==23.0.0
+h11==0.14.0
 idna==3.7
 isodate==0.6.1
 itsdangerous==2.2.0
@@ -14,9 +16,12 @@ lxml==5.2.2
 MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==2.0.1
+outcome==1.3.0.post0
+packaging==24.1
 pandas==2.2.2
 platformdirs==4.2.2
 psycopg2-binary==2.9.9
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
@@ -24,10 +29,19 @@ regex==2024.7.24
 requests==2.32.3
 requests-file==2.1.0
 requests-toolbelt==1.0.0
+selenium==4.23.1
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 tqdm==4.66.4
+trio==0.26.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2024.1
 Unidecode==1.3.8
 urllib3==2.2.2
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 Werkzeug==3.0.3
+wsproto==1.2.0
 zeep==4.2.1
