--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
@@ -33,6 +34,7 @@ selenium==4.23.1
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.6
 tqdm==4.66.4
 trio==0.26.0
 trio-websocket==0.11.1
