--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.4.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -8,6 +10,7 @@ cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==43.0.0
+distro==1.9.0
 firebase-admin==6.5.0
 Flask==3.0.3
 Flask-Cors==4.0.1
@@ -25,17 +28,27 @@ grpcio==1.66.0
 grpcio-status==1.66.0
 gunicorn==23.0.0
 h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httpx==0.27.0
 idna==3.7
 isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jiter==0.5.0
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.2.35
+langchain-openai==0.1.22
+langsmith==0.1.104
 lxml==5.2.2
 MarkupSafe==2.1.5
 msgpack==1.0.8
 nltk==3.8.1
 numpy==2.0.1
+openai==1.42.0
+orjson==3.10.7
 outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.2
@@ -46,12 +59,15 @@ psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 PyJWT==2.9.0
 pyparsing==3.1.4
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
 regex==2024.7.24
 requests==2.32.3
 requests-file==2.1.0
@@ -62,6 +78,8 @@ six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+tenacity==8.5.0
+tiktoken==0.7.0
 tqdm==4.66.4
 trio==0.26.0
 trio-websocket==0.11.1
