--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ psycopg2-binary = "^2.9.9"
 pandas = "^2.2.3"
 langchain-openai = "^0.2.0"
 beautifulsoup4 = "^4.12.3"
+fastapi = "^0.115.0"
+uvicorn = "^0.30.6"
 
 
 [build-system]
