--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ beautifulsoup4 = "^4.12.3"
 fastapi = "^0.115.0"
 uvicorn = "^0.30.6"
 gunicorn = "^23.0.0"
+firebase-admin = "^6.5.0"
 
 
 [build-system]
