--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,44 @@
 [tool.poetry]
-name = "new-simcc"
-version = "0.1.0"
+name = "simcc"
+version = "3.0.0"
 description = ""
 authors = ["meirelesgc <geu_costa@outlook.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.*"
+fastapi = {extras = ["standard"], version = "^0.115.6"}
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+taskipy = "^1.14.1"
+ruff = "^0.8.4"
+
+[tool.ruff]
+line-length = 81
+extend-exclude = ['migrations']
+
+[tool.ruff.lint]
+preview = true
+select = ['I', 'F', 'E', 'W', 'PL', 'PT']
+
+[tool.ruff.format]
+preview = true
+quote-style = 'single'
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = '-p no:warnings'
+
+[tool.taskipy.tasks]
+lint = 'ruff check .; ruff check . --diff'
+format = 'ruff check . --fix; ruff format .'
+run = 'fastapi dev simcc'
+pre_test = 'task lint'
+test = 'pytest -s -x --cov=simcc -vv'
+post_test = 'coverage html'
 
 [build-system]
 requires = ["poetry-core"]
