Adicionando Arquivo de Ambiente

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "3.12.*"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 respx = "^0.22.0"
 httpx = "^0.28.1"
+pydantic-settings = "^2.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
