--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ httpx = "^0.28.1"
 pydantic-settings = "^2.7.1"
 psycopg = {extras = ["pool"], version = "^3.2.3"}
 pandas = "^2.2.3"
+unidecode = "^1.3.8"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -24,6 +25,7 @@ ruff = "^0.8.4"
 [tool.ruff]
 line-length = 81
 extend-exclude = ['migrations']
+ignore = ['PLR0913', 'PLR0917']
 
 [tool.ruff.lint]
 preview = true
