--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.7.1"
 psycopg = {extras = ["pool"], version = "^3.2.3"}
 pandas = "^2.2.3"
 unidecode = "^1.3.8"
+zeep = "^4.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,7 +26,7 @@ ruff = "^0.8.4"
 [tool.ruff]
 line-length = 81
 extend-exclude = ['migrations']
-ignore = ['PLR0913', 'PLR0917']
+ignore = ['PLR0913', 'PLR0917', 'PLR2004']
 
 [tool.ruff.lint]
 preview = true
