--- a/compose.yml
+++ b/compose.yml
@@ -1,22 +1,15 @@
 services:
   simcc-postgres:
-    image: pgvector/pgvector:pg17
+    image: ankane/pgvector
     container_name: simcc-postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: simcc
+      POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
     volumes:
-      - simcc-postgres-data:/var/lib/postgresql/data
-      - ./scripts/database.sql:/docker-entrypoint-initdb.d/database.sql
-    networks:
-      - 001-NET
+      - simcc-postgres:/var/lib/postgresql/data
 
 volumes:
-  simcc-postgres-data:
-
-networks:
-  001-NET:
-    external: true
+  simcc-postgres:
