--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ psycopg = {extras = ["pool"], version = "^3.2.3"}
 pandas = "^2.2.3"
 unidecode = "^1.3.8"
 zeep = "^4.3.1"
+alembic = "^1.14.0"
+testcontainers = {extras = ["postgres"], version = "^4.9.0"}
 
 
 [tool.poetry.group.dev.dependencies]
