--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ unidecode = "^1.3.8"
 zeep = "^4.3.1"
 alembic = "^1.14.0"
 testcontainers = {extras = ["postgres"], version = "^4.9.0"}
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
