--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ zeep = "^4.3.1"
 alembic = "^1.14.0"
 testcontainers = {extras = ["postgres"], version = "^4.9.0"}
 openpyxl = "^3.1.5"
+pdfplumber = "^0.11.5"
 
 
 [tool.poetry.group.dev.dependencies]
