--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ alembic = "^1.14.0"
 testcontainers = {extras = ["postgres"], version = "^4.9.0"}
 openpyxl = "^3.1.5"
 pdfplumber = "^0.11.5"
+nltk = "^3.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
