--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ openpyxl = "^3.1.5"
 pdfplumber = "^0.11.5"
 nltk = "^3.9.1"
 beautifulsoup4 = "^4.12.3"
+requests = "^2.32.3"
+selenium = "^4.28.0"
 
 
 [tool.poetry.group.dev.dependencies]
