--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ nltk = "^3.9.1"
 beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
 selenium = "^4.28.0"
+firebase-admin = "^6.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
