Mudanças do conectee

--- a/.env.exemple
+++ b/.env.exemple
@@ -3,3 +3,16 @@ PG_USER=
 PASSWORD=
 HOST=
 PORT=
+
+ADMIN_DATABASE=
+ADMIN_PG_USER=
+ADMIN_PASSWORD=
+ADMIN_HOST=
+ADMIN_PORT=
+
+ROOT_PATH=
+PROXY_URL=
+ALTERNATIVE_CNPQ_SERVICE=
+FIREBASE_COLLECTION=
+
+JADE_EXTRATOR_FOLTER=
